Creat addcomment component

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -15,3 +15,5 @@ $color-turquoise: #27CCC0;
 $color-orange: #FF8A00;
 $color-dark-blue: #47568C;
 $background-color: #F9F9F9;
+$border-color: #F2F2F2;
+$border-gray-color: #CCCCCC;
