--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -6,6 +6,9 @@
   padding-bottom: 24px;
   border-bottom: 1px solid $border-color;
 
+  &:first-child {
+    margin-top: 30px;
+  }
   &:last-child {
     border-bottom: none;
   }
