Create items component with all sub-components

--- a/src/components/add-button/add-button.scss
+++ b/src/components/add-button/add-button.scss
@@ -3,6 +3,7 @@
 .add-button-wrapper {
   background-color: $color-turquoise;
   border-radius: 4px;
+  cursor: pointer;
 
   .button-text {
     color: $color-white;
