--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -30,6 +30,7 @@
   .comment-text{
     color: $color-light-black;
     font-weight: $font-light;
-    line-height: 21px;
+    font-size: 14px;
+    line-height: 20px;
   }
 }
