--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -2,8 +2,8 @@
 
 .commen-wrapper {
   display: flex;
-  padding-top: 14px;
-  padding-bottom: 24px;
+  padding-top: 12px;
+  padding-bottom: 22px;
   border-bottom: 1px solid $border-color;
 
   &:first-child {
@@ -17,6 +17,7 @@
     height: 52px;
     min-width: 52px;
     margin-right: 14px;
+    margin-top: 2px;
   }
 
   .square-orange {
@@ -32,5 +33,6 @@
     font-weight: $font-light;
     font-size: 14px;
     line-height: 20px;
+    hyphens: auto;
   }
 }
