--- a/src/components/items/items.scss
+++ b/src/components/items/items.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+@import '../../mixins';
 
 .items-wrapper {
   background-color: $color-white;
@@ -6,4 +7,5 @@
   margin-right: 20px;
   flex: 479;
   padding: 20px 15px 20px 30px;
+  @include border-decoration;
 }
