Activate add button with redux

--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -33,6 +33,7 @@
         font-size: 14px;
         font-weight: $font-semibold;
         margin-right: 10px;
+        cursor: pointer;
       }
     }
   }
