--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -1,5 +1,7 @@
 .item-list-wrapper {
   display: flex;
   flex-direction: column;
-  padding: 0 2px;
+  margin-left: -34px;
+  padding: 0 2px 0 36px;
+  overflow: scroll;
 }
